--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   -->
   <title>RedenStudio</title>
-
+  <link rel="stylesheet" href="AAA-CSS.css"></style>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
 
 
 </head>
