--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   -->
   <title>RedenStudio</title>
   <link rel="stylesheet" type="text/css" href="https://redenstudio.github.io/styles.css">
+  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/redenstudio/redenstudio.github.io/master/style.css">
   <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-
+  
 
 </head>
   
